--- a/style/main.css
+++ b/style/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
   line-height: 1.6;
   background-color: #f9f9f9;
 }
